--- a/src/views/ownerDashboard.ejs
+++ b/src/views/ownerDashboard.ejs
@@ -16,7 +16,12 @@
                 <i class="fas fa-crown"></i> CodeSecure
             </div>
             <nav class="navigation-menu">
-                <!-- Dashboard link removed -->
+                <a href="/owner-dashboard" class="nav-link active">
+                    <i class="fas fa-tachometer-alt"></i> Dashboard
+                </a>
+                <a href="/manage-homepage" class="nav-link">
+                    <i class="fas fa-home"></i> Manage Homepage
+                </a>
             </nav>
             <div class="user-actions">
                 <div class="user-info">
